--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,5 +13,8 @@
     "koa": "^2.0.0",
     "koa-router": "^7.0.1",
     "mount-koa-routes": "^2.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.2"
   }
 }
